--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" href="/images/logo.png" type="image/x-icon">
+  <title>Présentation</title>
 </head>
 <body>
-  
+  <header>
+    <img src="/images/photo-ronde.png" alt="Photo de profil" id="picture">
+    <h1>Yoan Gaussens</h1>
+    <h3>Développeur web full stack</h3>
+    <img src="/images/logo.png" alt="Logo YG de Yoan Gaussens" id="logo">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolores rem illum fugit perspiciatis soluta itaque fugiat hic fuga dolore quaerat esse unde, impedit ea ut, suscipit aliquam ipsa atque?</p>
+    <h3>Ensemble, donnons vie à vos projets </h3>
+  </header>
+
+  <main>
+    <h3>Mes différents liens</h3>
+    <div>
+      <a href="https://www.linkedin.com/in/yoan-gaussens/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+      <a href="https://github.com/YoanGaussens" target="_blank" rel="noopener noreferrer">Github</a>
+      <a href="mailto:yoan.gaussens@gmail.com">mail</a>
+    </div>
+    <h3>Les outils que j'utilise</h3>
+    <ul>
+      <li>JavaScript</li>
+      <li>TypeScipt</li>
+      <li>React</li>
+      <li>Tailwind</li>
+      <li>Material UI</li>
+      <li>Vite.js</li>
+      <li>Node.js</li>
+      <li>Express.js</li>
+      <li>PostgreSQL</li>
+      <li>MongoDB</li>
+      <li>Prisma</li>
+    </ul>
+    
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
