feat: :sparkles: Modify YG logo and box-shadow on slogan

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
 
-  <link rel="icon" href="/images/logo.png" type="image/x-icon" />
+  <link rel="icon" href="/logos/logo.png" type="image/x-icon" />
   <script src="index.js" defer></script>
   <title>Présentation</title>
 </head>
@@ -21,7 +21,7 @@
   <header>
     <img src="/images/photo-ronde.png" alt="Photo de profil" id="picture" />
     <h1>Yoan Gaussens</h1>
-    <img src="/images/logo.png" alt="Logo YG de Yoan Gaussens" id="logo" />
+    <img src="/logos/logo.png" alt="Logo YG de Yoan Gaussens" id="logo" />
     <h3 class="job">Développeur web full stack</h3>
     <div class="presentation">
       <p>💡 <strong>Passionné par le web et le développement</strong>, j’aime transformer des idées en projets concrets.
